cabal-version:        3.0
name:                 suffix
version:              0.1.0.0
synopsis:             Suffix arrays and friends
description:          Suffix arrays and friends.
homepage:             https://github.com/meooow25/suffix
bug-reports:          https://github.com/meooow25/suffix/issues
license:              BSD-3-Clause
license-file:         LICENSE
author:               Soumik Sarkar
maintainer:           soumiksarkar.3120@gmail.com
copyright:            (c) 2024 Soumik Sarkar
category:             Data Structures
build-type:           Simple

extra-doc-files:
    CHANGELOG.md
    README.md
    images/suffixtree.svg

source-repository head
    type:             git
    location:         https://github.com/meooow25/suffix.git

common warnings
    ghc-options:
        -Wall -Wcompat -Widentities -Wredundant-constraints -Wunused-packages

flag internal-checks
    description:      Enables internal checks
    default:          False
    manual:           True

library
    import:           warnings

    exposed-modules:
        Data.Suffix
        Data.Suffix.ByteString

    build-depends:
        base          >= 4.9 && < 5
      , bytestring    >= 0.10.8 && < 0.13
      , deepseq       >= 1.4.2 && < 1.6
      , primitive     >= 0.7.3 && < 0.10

    if flag(internal-checks)
        cpp-options: -DCHECKS

    hs-source-dirs:   src
    default-language: Haskell2010

test-suite suffix-test
    import:           warnings

    build-depends:
        base
      , bytestring
      , containers
      , primitive
      , suffix
      , tasty
      , tasty-hunit
      , tasty-quickcheck

    hs-source-dirs:   test
    main-is:          Main.hs

    type:             exitcode-stdio-1.0
    default-language: Haskell2010
