cabal-version:      3.0
name:               bench
version:            0.1.0.0
build-type:         Simple

common warnings
    ghc-options:
        -Wall -Wcompat -Widentities -Wredundant-constraints -Wunused-packages
        -ddump-simpl -ddump-to-file

benchmark suffix-bench
    import:           warnings

    build-depends:
        base
      , bytestring
      , suffix
      , tasty-bench

    hs-source-dirs:   .
    main-is:          Main.hs

    default-language: Haskell2010
    type:             exitcode-stdio-1.0
